--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,57 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+ <ion-content class="main-content">
+  <form #loginForm="ngForm">
+    <div *ngIf="!canUnlock && !hasSession">
+      <ion-list>
+        <ion-item>
+          <ion-label position="floating">E-Mail Address</ion-label>
+          <ion-input
+            id="email-input"
+            name="email"
+            type="email"
+            [(ngModel)]="email"
+            #emailInput="ngModel"
+            email
+            required
+          ></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input
+            id="password-input"
+            name="password"
+            type="password"
+            [(ngModel)]="password"
+            #passwordInput="ngModel"
+            required
+          ></ion-input>
+        </ion-item>
+      </ion-list>
+    </div>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <div class="unlock-app ion-text-center" *ngIf="canUnlock" (click)="unlock()">
+      <ion-icon name="lock-open-outline"></ion-icon>
+      <div>Unlock</div>
+    </div>
+  </form>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-button *ngIf="!hasSession" id="signin-button" expand="full" [disabled]="!loginForm.form.valid" (click)="signIn()"
+      >{{ canUnlock ? 'Sign In Instead' : 'Sign In' }}
+      <ion-icon slot="end" name="log-in-outline"></ion-icon>
+    </ion-button>
+    <ion-button *ngIf="hasSession" id="signout-button" expand="full" (click)="signOut()"
+      >Sign Out
+      <ion-icon slot="end" name="log-in-outline"></ion-icon>
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
