--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,55 +1,31 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Home
-    </ion-title>
+    <ion-title> Home </ion-title>
   </ion-toolbar>
 </ion-header>
 
- <ion-content class="main-content">
-  <form #loginForm="ngForm">
-    <div *ngIf="!canUnlock && !hasSession">
-      <ion-list>
-        <ion-item>
-          <ion-label position="floating">E-Mail Address</ion-label>
-          <ion-input
-            id="email-input"
-            name="email"
-            type="email"
-            [(ngModel)]="email"
-            #emailInput="ngModel"
-            email
-            required
-          ></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Password</ion-label>
-          <ion-input
-            id="password-input"
-            name="password"
-            type="password"
-            [(ngModel)]="password"
-            #passwordInput="ngModel"
-            required
-          ></ion-input>
-        </ion-item>
-      </ion-list>
-    </div>
-
-    <div class="unlock-app ion-text-center" *ngIf="canUnlock" (click)="unlock()">
-      <ion-icon name="lock-open-outline"></ion-icon>
-      <div>Unlock</div>
-    </div>
-  </form>
+<ion-content class="main-content">
+  <div class="unlock-app ion-text-center" *ngIf="canUnlock" (click)="unlock()">
+    <ion-icon name="lock-open-outline"></ion-icon>
+    <div>Unlock</div>
+  </div>
 </ion-content>
 
 <ion-footer *ngIf="!canUnlock">
   <ion-toolbar>
-    <ion-button *ngIf="!hasSession" id="signin-button" expand="full" [disabled]="!loginForm.form.valid" (click)="signIn()"
+    <ion-button
+      *ngIf="!hasSession"
+      id="signin-button"
+      expand="full"
+      (click)="signIn()"
       >Sign In
       <ion-icon slot="end" name="log-in-outline"></ion-icon>
     </ion-button>
-    <ion-button *ngIf="hasSession" id="signout-button" expand="full" (click)="signOut()"
+    <ion-button
+      *ngIf="hasSession"
+      id="signout-button"
+      expand="full"
+      (click)="signOut()"
       >Sign Out
       <ion-icon slot="end" name="log-in-outline"></ion-icon>
     </ion-button>
